--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </ul>
   </div>
 </nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
-<router-outlet>
-
-</router-outlet>
